--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   ~ DO NOT REMOVE COPYRIGHT NOTICES OR THIS HEADER.
   ~
   ~ Copyright (c) 2016. ForgeRock AS. All rights reserved.
+  ~ Portions Copyright 2018 Wren Security.
   ~
   ~ The contents of this file are subject to the terms
   ~ of the Common Development and Distribution License
@@ -24,35 +25,48 @@
   ~ "Portions Copyrighted [year] [name of copyright owner]"
   ~
 -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.forgerock.openicf.connectors</groupId>
         <artifactId>connectors-parent</artifactId>
         <version>1.5.0.0</version>
     </parent>
+
     <groupId>org.forgerock.openicf.connectors</groupId>
     <artifactId>ssh-connector</artifactId>
     <version>1.4.1.0</version>
     <packaging>bundle</packaging>
-    <name>SSH Connector</name>
+
+    <name>SSH Connector for Wren:ICF</name>
     <description>Generic SSH connector</description>
-    <url>https://openicf.forgerock.org/connectors/ssh-connector</url>
-    <issueManagement>
-        <system>jira</system>
-        <url>https://bugster.forgerock.org/jira/browse/OPENICF/component/11055</url>
-    </issueManagement>
-    <ciManagement>
-        <system>jenkins</system>
-        <url>https://ci.forgerock.org/view/OpenICF/job/OpenICF - ssh-connector - postcommit/</url>
-    </ciManagement>
+    <url>https://github.com/WrenSecurity/wrenicf-ssh-connector</url>
+    <inceptionYear>2017</inceptionYear>
+
     <scm>
-        <connection>scm:git:ssh://git@stash.forgerock.org:7999/openicf/ssh-connector.git</connection>
-        <developerConnection>scm:git:ssh://git@stash.forgerock.org:7999/openicf/ssh-connector.git</developerConnection>
-        <url>http://stash.forgerock.org/projects/OPENICF/repos/ssh-connector/browse/</url>
-      <tag>1.4.1.0</tag>
-  </scm>
+        <url>https://github.com/WrenSecurity/wrenicf-ssh-connector</url>
+        <connection>scm:git:git://github.com/WrenSecurity/wrenicf-ssh-connector.git</connection>
+        <developerConnection>scm:git:git@github.com:WrenSecurity/wrenicf-ssh-connector.git</developerConnection>
+    </scm>
+
+    <issueManagement>
+        <system>GitHub Issues</system>
+        <url>https://github.com/WrenSecurity/wrenicf-ssh-connector/issues</url>
+    </issueManagement>
+
+    <mailingLists>
+        <mailingList>
+            <name>Wren Security Mailing List</name>
+            <archive>https://groups.google.com/forum/#!forum/wren-security</archive>
+            <subscribe>https://groups.google.com/forum/#!forum/wren-security</subscribe>
+            <unsubscribe>https://groups.google.com/forum/#!forum/wren-security</unsubscribe>
+            <post>wren-security@googlegroups.com</post>
+        </mailingList>
+    </mailingLists>
+
     <properties>
         <maven.compiler.target>1.7</maven.compiler.target>
         <maven.compiler.source>1.7</maven.compiler.source>
@@ -61,81 +75,92 @@
         <framework.compatibilityVersion>1.4</framework.compatibilityVersion>
         <framework.releaseVersion>1.0</framework.releaseVersion>
     </properties>
+
     <repositories>
+        <!-- Needed to retrieve parent POM -->
         <repository>
-            <id>forgerock-staging-repository</id>
-            <name>ForgeRock Release Repository</name>
-            <url>http://maven.forgerock.org/repo/releases</url>
+            <id>wrensecurity-releases</id>
+            <name>Wren Security Release Repository</name>
+            <url>https://wrensecurity.jfrog.io/wrensecurity/releases</url>
+
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-        </repository>
-        <repository>
-            <id>forgerock-snapshots-repository</id>
-            <name>ForgeRock Snapshot Repository</name>
-            <url>http://maven.forgerock.org/repo/snapshots</url>
+
             <releases>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </releases>
         </repository>
     </repositories>
+
     <dependencies>
          <dependency>
             <groupId>org.forgerock.openicf.framework</groupId>
             <artifactId>connector-framework</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>2.4.7</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>com.github.cverges</groupId>
             <artifactId>expect4j</artifactId>
             <version>1.9</version>
         </dependency>
+
         <dependency>
             <groupId>com.jcraft</groupId>
             <artifactId>jsch</artifactId>
             <version>0.1.53</version>
         </dependency>
+
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.forgerock.openicf.framework</groupId>
             <artifactId>connector-framework-internal</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.forgerock.openicf.framework</groupId>
             <artifactId>connector-test-common</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>groovy-connector</artifactId>
             <version>1.4.3.0</version>
         </dependency>
+
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.1.5</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.gmaven</groupId>
                 <artifactId>gmaven-plugin</artifactId>
                 <version>1.5</version>
+
                 <configuration>
                     <providerSelection>2.0</providerSelection>
                     <sourceEncoding>UTF-8</sourceEncoding>
                 </configuration>
+
                 <executions>
                     <execution>
                         <goals>
@@ -146,12 +171,14 @@
                         </goals>
                     </execution>
                 </executions>
+
                 <dependencies>
                     <dependency>
                         <groupId>org.codehaus.gmaven.runtime</groupId>
                         <artifactId>gmaven-runtime-2.0</artifactId>
                         <version>1.5</version>
                     </dependency>
+
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-all</artifactId>
@@ -159,19 +186,23 @@
                     </dependency>
                 </dependencies>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+
                 <configuration>
                     <instructions>
                         <Require-Bundle>groovy-all</Require-Bundle>
                     </instructions>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.forgerock.maven.plugins</groupId>
                 <artifactId>openicf-maven-plugin</artifactId>
+
                 <executions>
                     <execution>
                         <goals>
